--- a/App.json
+++ b/App.json
@@ -70,7 +70,7 @@
       },
       {
         "name": "AWANI",
-        "uri": "https://bcsecurelivehls-i.akamaihd.net/hls/live/722763/4508222217001/stream04/streamPlaylist.m3u8",
+        "uri": "https://awanitv.akamaized.net/hls/live/2017836/LiveTV1/index.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=OTE0ZmFiNmItNmNkYi0zNzZkLWEyYzctMzM0YTc3MWJjZDI4"
       },
