--- a/App.json
+++ b/App.json
@@ -1144,12 +1144,18 @@
     "samples": [
       {
         "name": "AND FLIX",
+        "uri": "https://y5w8j4a9.ssl.hwcdn.net/andflix/index.m3u8",
+        "drm_scheme": "widevine",
+        "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
+      },
+	  {
+        "name": "AND FLIX HD",
         "uri": "https://y5w8j4a9.ssl.hwcdn.net/andflixhd/index.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
       },
 	  {
-        "name": "AND PRIVE",
+        "name": "AND PRIVE HD",
         "uri": "https://y5w8j4a9.ssl.hwcdn.net/andprivehd/index.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
