--- a/App.json
+++ b/App.json
@@ -40,7 +40,7 @@
       },
       {
         "name": "DRAMA SANGAT",
-        "uri": "https://github.com/exodiver/IPTV/raw/master/M3U8/Token/DramaSangat.m3u8",
+        "uri": "https://www.layarperak.tv/media/live4kl.m3u8?n=5",
         "drm_scheme": "widevine",
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=OTE0ZmFiNmItNmNkYi0zNzZkLWEyYzctMzM0YTc3MWJjZDI4"
       },
